--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/ATLAS_Harvester_LG_a.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/ATLAS_Harvester_LG_a.cfg
@@ -20,7 +20,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_ATLAS_Harvester_Lg_a_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_ATLAS_Harvester_Lg_a_Description
 
 	tags = cck-usi-manufacturing
