--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/ATLAS_Harvester_SM.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/ATLAS_Harvester_SM.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_ATLAS_Harvester_Sm_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_ATLAS_Harvester_Sm_Description
 
 	tags = cck-usi-manufacturing
