--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/DemoBlock.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/DemoBlock.cfg
@@ -14,7 +14,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = #LOC_USI_DeomlitionBlock_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_DeomlitionBlock_Description 
 
 	tags = USI MKS tool utility demolition break recover USI charge explosive boom Recycle MaterialKits
