--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_Kerbitat.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_Kerbitat.cfg
@@ -32,7 +32,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Duna_Kerbitat_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Duna_Kerbitat_Description 
 
 	tags = USI MKS Duna Crew Hatch ?eva ?iva Control command base lander colony habitat kerbitat comfort ScienceContainer experience LifeSupport filter living Kerbal Recycle LifeSupport MaterialKits SpecializedParts Water ElectricCharge e/c cck-usi-kolonization
