--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_LogCenter.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_LogCenter.cfg
@@ -31,7 +31,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Duna_LogCenter_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Duna_LogCenter_Description
 
 	tags = USI MKS Duna Crew Hatch ?eva ?iva Control command base lander station colony warehouse stor stock resource planet work ScienceContainer logistics Kerbal repair LifeSupport liv ElectricCharge e/c cck-usi-kolonization
