--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_PDU.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_PDU.cfg
@@ -31,7 +31,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Duna_PDU_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Duna_PDU_Description
 
 	tags = USI MKS Duna Crew Hatch ?eva ?iva Control command base lander colony power electr distrib nuc reactor core thermal heat ScienceContainer logistics generat Kerbal Distribute PDU EnrichedUranium DepletedFuel XenonGas ElectricCharge e/c cck-usi-kolonization
