--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_Pioneer.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_Pioneer.cfg
@@ -31,7 +31,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Duna_Pioneer_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Duna_Pioneer_Description
 
 	tags = USI MKS Duna Crew Hatch ?eva ?iva Control command base lander colony colonization pioneer ScienceContainer logistics train KerbNet survey Kerbal skil repair Recycle LifeSupport Ore Recyclables ElectricCharge e/c cck-usi-kolonization
