--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/LightGlobe.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/LightGlobe.cfg
@@ -17,7 +17,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = #LOC_USI_MKS_LightGlobe_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_MKS_LightGlobe_Description
 
 	tags = cck-lights
