--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_FlexOTube.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_FlexOTube.cfg
@@ -17,7 +17,7 @@ PART
 	category = Coupling
 	subcategory = 0
 	title = #LOC_USI_MKS_FlexOTube_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_MKS_FlexOTube_Description
 	
 	tags = USI MKS expand bend attach tube KAS KIS item stor flex dock join base orbit station 
