--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_InflationTank.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_InflationTank.cfg
@@ -18,7 +18,7 @@ PART
 	
 	subcategory = 0
 	title = #LOC_USI_MKS_InflationTank_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_MKS_InflationTank_Description
 	
 	tags = USI MKS tank expand inflate jettison fuel stack Inflatable LFO Oxidizer LiquidFuel 
