--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_LandingLeg.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_LandingLeg.cfg
@@ -28,7 +28,7 @@ cost = 100
 category = Ground
 subcategory = 0
 title = #LOC_USI_MKS_LandingLeg_Title
-manufacturer = Umbra Space Industries
+manufacturer = #LOC_manufacturer_USI
 description = #LOC_USI_MKS_LandingLeg_Description
 
 tags = USI MKS land stabilizer leg  ground support 
