--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_PowerAntenna.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_PowerAntenna.cfg
@@ -29,7 +29,7 @@ cost = 3800
 category = Electrical
 subcategory = 0
 title = #LOC_USI_UKS_PowerAntenna_Title
-manufacturer = Umbra Space Industries
+manufacturer = #LOC_manufacturer_USI
 description = #LOC_USI_UKS_PowerAntenna_Description
 
 tags = USI MKS power transfer tranceiver microwave transmission logistics consume distribut Distribute PDU 
