--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_PowerBox.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_PowerBox.cfg
@@ -29,7 +29,7 @@ cost = 3800
 category = Electrical
 subcategory = 0
 title = #LOC_USI_UKS_PowerBox_Title
-manufacturer = Umbra Space Industries
+manufacturer = #LOC_manufacturer_USI
 description = #LOC_USI_UKS_PowerBox_Description
 
 tags = USI MKS utility power coupler transfer cables logistics consume distribut Distribute PDU 
