--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_SkyCrane.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_SkyCrane.cfg
@@ -25,7 +25,7 @@ PART
 	category = Engine
 	subcategory = 0
 	title = #LOC_USI_MKS_SkyCrane_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_MKS_SkyCrane_Description
 
 	tags = USI MKS cmg gyro react pod engine utility crane sky construction deploy LFO Oxidizer LiquidFuel ElectricCharge e/c 
