--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AgModule.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AgModule.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_AgModule_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_AgModule_Description
 
 	tags = USI MKS Ranger base colony agriculture farm agroponics greenhouse resource convert cultivate bio recyc swap cargo weight logistics MKS ScienceContainter LifeSupport Kerbal algae expand Inflatable Recycle LifeSupport Substrate MaterialKits Supplies Ore Recyclables SpecializedParts Fertilizer Dirt Organics Water Mulch ElectricCharge e/c cck-usi-kolonization
