--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AuxCon.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AuxCon.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_AuxCon_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_AuxCon_Description
 
 	tags = USI MKS Ranger Crew ?iva Control command aux land cabin small basic single Kerbal ScienceContainer weight distribut cargo Distribute PDU ElectricCharge e/c cck-usi-kolonization
