--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_CommPak.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_CommPak.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_CommPak_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_CommPak_Description
 
 	tags = USI MKS Ranger Crew Hatch ?eva ?iva aux land lab radio comm small antenna ScienceContainer weight distribut cargo convert transmit relay ElectricCharge e/c cck-usi-kolonization
