--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_HeatPump.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_HeatPump.cfg
@@ -21,7 +21,7 @@ PART
 	category = Thermal
 	subcategory = 0
 	title = #LOC_USI_Ranger_HeatPump_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_Ranger_HeatPump_Description
 	
 	tags = USI MKS Ranger aux utility attach point position surface batt power weight distribut cargo ElectricCharge e/c
