--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_MiniHab.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_MiniHab.cfg
@@ -18,7 +18,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = #LOC_USI_Ranger_MiniHab_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_MiniHab_Description
 
 	tags = cck-usi-kolonization
