--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_PowerPack.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_PowerPack.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_PowerPack_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_PowerPack_Description
 	
 	tags = USI MKS Ranger aux utility attach position surface batt power exten cord generator Plutonium-238 Distribute PDU ElectricCharge e/c cck-usi-kolonization
