--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Smelter.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Smelter.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_Smelter_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Ranger_Smelter_Description
 	
 	tags = USI MKS Ranger aux utility attach surface filter regolith sifter resources industrial convert sort smelt repair swap config MetalicOre Substrate Minerals MaterialKits Metals Polymers Ore Recyclables SpecializedParts ElectricCharge e/c cck-usi-manufacturing
