--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_VBracket.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_VBracket.cfg
@@ -20,7 +20,7 @@ PART
 	category = Structural
 	subcategory = 0
 	title = #LOC_USI_Ranger_VBracket_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_Ranger_VBracket_Description
 	
 	tags = USI MKS Ranger aux utility decoupler ring ball anchor hub Tundra structur base attach  
