--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Workshop.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Workshop.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_Workshop_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Ranger_Workshop_Description
 	
 	tags = USI MKS Ranger Crew ?iva aux utility attach point position surface work fabrica repair convert skill swap weight distr Inflatable Recycle LifeSupport MaterialKits Metals Polymers Ore Recyclables SpecializedParts Chemicals ElectricCharge e/c cck-usi-manufacturing
