--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Salamander.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Salamander.cfg
@@ -19,7 +19,7 @@ PART
 	category = Pods
 	subcategory = 0
 	title = #LOC_USI_SalamanderPod_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_SalamanderPod_Description
 
 	tags = USI MKS Crew SAS Hatch ?eva cmg gyro react ?iva Control command ship pod capsule ScienceContainer life live power coupler Salamander pod capsule Distribute PDU Recycle LifeSupport ElectricCharge e/c
