--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/ScoutLanderMk2.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/ScoutLanderMk2.cfg
@@ -24,7 +24,7 @@ PART
 	category = Ground
 	subcategory = 0
 	title = #LOC_USI_ScoutLanderMk2_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_ScoutLanderMk2_Description
 	tags = USI MKS base utility land legs gear stabil ground support contain Scout weight distribut cargo connect ElectricCharge e/c
 
