--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_375Cap.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_375Cap.cfg
@@ -18,7 +18,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_375Cap_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_375Cap_Description
 
 	tags = USI MKS Tundra base utility station adapt cap attach cck-usi-kolonization
