--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_425_Hab.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_425_Hab.cfg
@@ -20,7 +20,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_425_Hab_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_425_Hab_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility habitat expand swap convert hab bay quarters Kerbal repair life support space weight distribut cargo greenhouse repair Inflatable Recycle LifeSupport MaterialKits Ore Recyclables SpecializedParts ElectricCharge e/c cck-usi-kolonization
