--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_ASM.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_ASM.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_ASM_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Tundra_ASM_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility station colony agriculture farm agroponics greenhouse resource convert cultivate bio recyc swap cargo weight logistics MKS ScienceContainter LifeSupport Kerbal algae expand bay industr generati extract Recycle LifeSupport liv Substrate MaterialKits Supplies Ore Recyclables SpecializedParts Fertilizer Dirt Organics Water Mulch ElectricCharge e/c cck-usi-manufacturing
