--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Airlock.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Airlock.cfg
@@ -20,7 +20,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Airlock_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Airlock_Description
 
 	tags = USI MKS Tundra Crew Hatch ?eva ?iva Control command utility airlock pod container cabin attach KAS orbit surface Liv surface ElectricCharge e/c cck-usi-kolonization
