--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Akademy.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Akademy.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Akademy_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Akademy_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility station train school exper level orbit field Kerb landed Akademy work coupler space LifeSupport liv ElectricCharge e/c cck-usi-kolonization
