--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_HabRing.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_HabRing.cfg
@@ -17,7 +17,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_HabRing_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_HabRing_Description
 	
 	tags = USI MKS Tundra ?iva base utility station convert greenhouse colony agri space habitat repair bay ring orbit Inflatable Recycle LifeSupport liv MaterialKits Ore Recyclables ElectricCharge e/c cck-usi-kolonization
