--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Hub250.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Hub250.cfg
@@ -32,7 +32,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Hub250_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Hub250_Description
 
 	tags = USI MKS Tundra Control command base utility station hub junct trus construc orbit ground ElectricCharge e/c cck-usi-kolonization
