--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MedBay375.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MedBay375.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_MedBay375_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_MedBay375_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base utility colony medical health medbay coloni kerb home ScienceContainer logistics Kerbal home sick repair LifeSupport liv ColonySupplies ElectricCharge e/c cck-usi-kolonization
