--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MiniAirlock.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MiniAirlock.cfg
@@ -18,7 +18,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_MiniAirlock_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_MiniAirlock_Description
 
 	tags = USI MKS Tundra Crew Hatch ?eva ?iva base utility airlock pod container cabin attach Liv surface orbit space cck-usi-kolonization
