--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MultiHub.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MultiHub.cfg
@@ -34,7 +34,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_MultiHub_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_MultiHub_Description
 
 	tags = USI MKS Tundra Control command base utility station hub junct trus construc Ranger multi orbit ground space ElectricCharge e/c cck-usi-kolonization
