--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MultiTruss.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MultiTruss.cfg
@@ -37,7 +37,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_MultiTruss_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_MultiTruss_Description
 
 	tags = USI MKS Tundra base utility tube truss connect attach Ranger doughnut flush multi cck-usi-kolonization
