--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_NodeHelper.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_NodeHelper.cfg
@@ -17,7 +17,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_NodeHelper_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_NodeHelper_Description
 	
 	tags = USI MKS Tundra utility green dynamic node helper stick block tool cck-usi-kolonization
