--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_PDU_375.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_PDU_375.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_PDU_375_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_PDU_375_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base utility station colony coloni power electr distrib nuc reactor core thermal heat sciencecontainer repair resource thermal Distribute PDU LifeSupport liv EnrichedUranium DepletedFuel XenonGas ElectricCharge e/c cck-usi-kolonization
