--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_RecyclingPlant.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_RecyclingPlant.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_RecyclingPlant_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Tundra_RecyclingPlant_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base utility station colony coloni recyc plant broken reclaim raw materials sciencecontainer repair Recycle LifeSupport liv Metals Polymers Ore Recyclables Chemicals ElectricCharge e/c cck-usi-manufacturing
