--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Refinery.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Refinery.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Refinery_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Tundra_Refinery_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base utility station colony coloni refin industr config bay resourc products work convert swap sciencecontainer repair Recycle LifeSupport liv MetalicOre Substrate Minerals ExoticMinerals RareMetals MaterialKits Metals Polymers Ore Recyclables SpecializedParts Silicates Silicon RefinedExotics Chemicals ElectricCharge e/c cck-usi-manufacturing
