--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_RegSifter.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_RegSifter.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_RegSifter_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Tundra_RegSifter_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base utility station colony coloni regolith sifter sort extract resourc sciencecontainer repair LifeSupport liv Ore Recyclables Dirt ElectricCharge e/c cck-usi-manufacturing
