--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Workshop250.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Workshop250.cfg
@@ -27,7 +27,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Workshop250_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Workshop250_Description
 	
 	tags = USI MKS Tundra Crew ?iva aux utility attach point position surface work fabrica repair convert skill swap weight distr Inflatable Recycle LifeSupport MaterialKits Metals Polymers Ore Recyclables SpecializedParts Chemicals ElectricCharge e/c cck-usi-manufacturing
