--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Factory_20m.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Factory_20m.cfg
@@ -74,7 +74,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Atlas_Factory_20m_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Atlas_Factory_20m_Description
 	
 	tags = USI MKS Atlas Crew ?iva Control command base utility station convert support factor workshop science container goods assembl stor logistics swap bay repair Kerbal Recycle LifeSupport liv MaterialKits Metals Polymers Ore Recyclables SpecializedParts Silicon RefinedExotics ColonySupplies Organics Chemicals ElectricCharge e/c cck-usi-manufacturing
