--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Farm_20m.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Farm_20m.cfg
@@ -74,7 +74,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Atlas_Farm_20m_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Atlas_Farm_20m_Description
 
 	tags = USI MKS Atlas Crew Hatch ?eva ?iva Control command base lander colony agriculture farm agroponics greenhouse resource convert cultivate colony USI logistics MKS ScienceContainter LifeSupport Recycle LifeSupport Substrate MaterialKits Supplies Ore Recyclables SpecializedParts Fertilizer Dirt Organics Water Mulch ElectricCharge e/c Kerbal cck-usi-kolonization
