--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Kerbitat_20m.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Atlas/Atlas_Kerbitat_20m.cfg
@@ -72,7 +72,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Atlas_Kerbitat_20m_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Atlas_Kerbitat_20m_Description
 	
 	tags = USI MKS Atlas Crew ?iva Control command base utility station convert colony space habitat kerbitat bay recyc quarter comfor Kerbal purif swap repair hab Recycle LifeSupport liv MaterialKits Ore SpecializedParts Water ElectricCharge e/c cck-usi-kolonization
