--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_MedBay.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Duna_MedBay.cfg
@@ -31,7 +31,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Duna_MedBay_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Duna_MedBay_Description
 
 	tags = USI MKS Duna Crew Hatch ?eva ?iva Control command base lander colony medical health medbay ScienceContainer logistics Kerbal home sick LifeSupport ColonySupplies ElectricCharge e/c cck-usi-kolonization
