--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_Drill_03A.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_Drill_03A.cfg
@@ -22,7 +22,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = #LOC_USI_MKS_Drill_03A_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_MKS_Drill_03A_Description
 	
 	tags = USI MKS drill industrial miner resources surface harvester converter thermal heat Uraninite Substrate Minerals ExoticMinerals RareMetals MaterialKits SpecializedParts Hydrates Gypsum Dirt Silicates Water cck-usi-manufacturing
