--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_LandingWheel.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_LandingWheel.cfg
@@ -28,7 +28,7 @@ cost = 100
 category = Ground
 subcategory = 0
 title = #LOC_USI_MKS_LandingWheel_Title
-manufacturer = Umbra Space Industries
+manufacturer = #LOC_manufacturer_USI
 description = #LOC_USI_MKS_LandingWheel_Description
 
 tags = USI MKS wheel trolley move pivot motor suspension steer brake land ElectricCharge e/c 
