--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_Processor125.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_Processor125.cfg
@@ -23,7 +23,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_MKS_Processor125_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_MKS_Processor125_Description
 	
 	tags = USI MKS resources industrial convert sort smelt repair swap config MetalicOre Substrate Minerals MaterialKits Metals Polymers Ore Recyclables SpecializedParts ElectricCharge e/c cck-usi-manufacturing
