--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_WideLeg.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/MKS_WideLeg.cfg
@@ -19,7 +19,7 @@ PART
 	category = Ground
 	subcategory = 0
 	title = #LOC_USI_WideLeg_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_WideLeg_Description
 	
 	tags = USI MKS utility land stabilizer leg ground support wide rotat compact 
