--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AnchorHub.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_AnchorHub.cfg
@@ -24,7 +24,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_AnchorHub_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_AnchorHub_Description
 
 	tags = USI MKS Ranger Control command base hub ball weight distribut construction probe core land cck-usi-kolonization
