--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_BallHub.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_BallHub.cfg
@@ -23,7 +23,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_BallHub_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_BallHub_Description
 
 	tags = USI MKS Ranger aux land ball weight distribut construction hub ElectricCharge e/c cck-usi-kolonization
