--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_BatPak.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_BatPak.cfg
@@ -21,7 +21,7 @@ PART
 	category = Electrical
 	subcategory = 0
 	title = #LOC_USI_Ranger_BatPak_Title
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = #LOC_USI_Ranger_BatPak_Description
 	mass = 0.3
 	dragModelType = default
