--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Crusher.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_Crusher.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_Crusher_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Ranger_Crusher_Description
 
 	tags = USI MKS Ranger aux utility crush portable extract resource agri convert swap crush-o-matic MaterialKits Ore Recyclables SpecializedParts Fertilizer Gypsum ElectricCharge e/c cck-usi-manufacturing
