--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_HabModule.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_HabModule.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_HabModule_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_HabModule_Description
 	
 	tags = USI MKS Ranger Crew Hatch ?eva ?iva aux utility habitat expand swap convert hab bay quarters Kerbal repair life support weight distribut cargo Inflatable Recycle LifeSupport MaterialKits Ore Recyclables SpecializedParts ElectricCharge e/c cck-usi-kolonization
