--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_ISM.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Ranger_ISM.cfg
@@ -21,7 +21,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Ranger_ISM_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Ranger_ISM_Description
 
 	tags = USI MKS Ranger aux utility material stor warehouse distribut connect live cargo weight SolidFuel raw refined goods equipment refuel agri exotic advance Inflatable Recycle MetalicOre Uraninite Substrate Minerals Karbonite ExoticMinerals RareMetals MaterialKits Metals Polymers Supplies Ore Ore Recyclables SpecializedParts Fertilizer Hydrates Gypsum Dirt Silicates Silicon RefinedExotics ColonySupplies Organics LFO Oxidizer Water Chemicals Mulch LiquidFuel MonoPropellant Mono cck-usi-kolonization
