--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Rock2.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Rock2.cfg
@@ -16,7 +16,7 @@ PART
 	category = none
 	subcategory = 0
 	title = Resource Lode
-	manufacturer = Umbra Space Industries
+	manufacturer = #LOC_manufacturer_USI
 	description = A chunk of easily accessed resources
 	attachRules = 1,1,1,1,0
 	mass = 0.01
