--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_250Cap.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_250Cap.cfg
@@ -18,7 +18,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_250Cap_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_250Cap_Description
 
 	tags = USI MKS Tundra base utility station adapt cap attach struct cck-usi-kolonization
