--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Agriculture375.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Agriculture375.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Agriculture375_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Agriculture375_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility colony agriculture farm agroponics greenhouse resource convert cultivate bio recyc swap cargo weight logistics MKS ScienceContainter LifeSupport Kerbal algae expand bay Recycle LifeSupport Substrate MaterialKits Supplies Ore Recyclables SpecializedParts Fertilizer Dirt Organics Water Mulch ElectricCharge e/c cck-usi-kolonization
