--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_AssemblyPlant.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_AssemblyPlant.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_AssemblyPlant_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	description = #LOC_USI_Tundra_AssemblyPlant_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility station convert support factor workshop science container goods assembl stor logistics swap bay repair Kerbal Recycle LifeSupport liv MaterialKits Metals Polymers Ore Recyclables SpecializedParts Silicon RefinedExotics ColonySupplies Organics Chemicals ElectricCharge e/c cck-usi-manufacturing
