--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Kerbitat250.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Kerbitat250.cfg
@@ -27,7 +27,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Kerbitat250_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Kerbitat250_Description
 	
 	tags = USI MKS Tundra Crew ?iva Control command base utility station convert colony space habitat kerbitat bay inventory recyc quarter comfor Kerbal purif swap repair hab Recycle LifeSupport liv MaterialKits Ore SpecializedParts Water ElectricCharge e/c cck-usi-kolonization
