--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MiniTruss.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_MiniTruss.cfg
@@ -29,7 +29,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_MiniTruss_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_MiniTruss_Description
 
 	tags = USI MKS Tundra base utility tube truss connect attach Ranger doughnut flush cck-usi-kolonization
