--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_NukeProc.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_NukeProc.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_NukeProc_Title
-	manufacturer = USI - Manufacturing Division
+	manufacturer = #LOC_manufacturer_USIMD
 	//description = A field training center for training your Kerbonauts.  When training is conducted, attendees will gain experience based on the instructors present, and in their chosen field.  Up to one star when used on Kerbin, two stars while in orbit, and three stars if training takes place landed on another planet or moon.
 	description = #LOC_USI_Tundra_NukeProc_Description
 
