--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Pioneer_375.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Parts/Tundra_Pioneer_375.cfg
@@ -28,7 +28,7 @@ PART
 	category = none
 	subcategory = 0
 	title = #LOC_USI_Tundra_Pioneer_375_Title
-	manufacturer = USI - Kolonization Division
+	manufacturer = #LOC_manufacturer_USIKD
 	description = #LOC_USI_Tundra_Pioneer_375_Description
 
 	tags = USI MKS Tundra Crew ?iva Control command base lander station colony coloni warehouse logistics planet train KerbNet survey workshop terrain biome experience manage repair Recycle LifeSupport liv Ore Recyclables ElectricCharge e/c cck-usi-kolonization
